--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 		<link rel="stylesheet" href="assets/stylesheets/main.css">
 	</head>
 	<body>
-		<header>
-			<h1>
-				<a href="index.html">Styles Conference</h1>
+		<header class="container">
+	<section class="container">
+		<h1>
+			<a href="index.html">Styles Conference</a>
+		</h1>
+	</section>
+
 			<h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
 			<nav>
@@ -20,7 +24,7 @@
 			</nav> 
 		</header>
 
-		<section>
+		<section class="hero container">
 
 			<section>
 				<h2>Dedicated to the Craft of Building Websites</h2>
@@ -29,9 +33,9 @@
 					technologies. Join us this August!</p>
 			</section>
 
-			<a href="register.html">Register Now</a>
+			<a class= "btn btn-alt" href="register.html">Register Now</a>
 
-			<section>
+			<section class="container">
 					<a href="speakers.html">
 						<h5>Speakers</h5>
 						<h3>World-Class Speakers</h3>
@@ -42,7 +46,7 @@
 
 		</section>
 
-		<footer>
+		<footer class="container">
 			<small>&copy; Styles Conference</small>
 
 			<nav>
