--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<link rel="stylesheet" href="assets/stylesheets/main.css">
 	</head>
 	<body>
-		<header class="container">
-	<section class="container">
-		<h1>
-			<a href="index.html">Styles Conference</a>
+		<header class="container group">
+	<section class="grid">
+		<h1 class = "logo">
+			<a href="index.html">Styles <br> Conference</a>
 		</h1>
 	</section>
 
@@ -26,7 +26,7 @@
 
 		<section class="hero container">
 
-			<section>
+			<section class="col-1-3">
 				<h2>Dedicated to the Craft of Building Websites</h2>
 				<p>Every year the brightest web designers and front-end 
 					developers descend on Chicago to discuss the latest 
@@ -35,7 +35,7 @@
 
 			<a class= "btn btn-alt" href="register.html">Register Now</a>
 
-			<section class="container">
+			<section class="col-1-3">
 					<a href="speakers.html">
 						<h5>Speakers</h5>
 						<h3>World-Class Speakers</h3>
@@ -44,9 +44,13 @@
 					fantastic speakers, here to share their stories </p>
 			</section>
 
+			<section class = "col-1-3">
+
+			</section>
+
 		</section>
 
-		<footer class="container">
+		<footer class="primary-footer container group">
 			<small>&copy; Styles Conference</small>
 
 			<nav>
