--- a/index.html
+++ b/index.html
@@ -1,67 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Styles Conference</title>
-		<link rel="stylesheet" href="assets/stylesheets/main.css">
-	</head>
-	<body>
-		<header class="container group">
-	<section class="grid">
-		<h1 class = "logo">
-			<a href="index.html">Styles <br> Conference</a>
-		</h1>
-	</section>
 
-			<h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+  <head>
+    <meta charset="utf-8">
+    <title>Styles Conference</title>
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet"
+    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  </head>
 
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="speakers.html">Speakers</a>
-				<a href="schedule.html">Schedule</a>
-				<a href="venue.html">Venue</a>
-				<a href="register.html">Register</a>
-			</nav> 
-		</header>
+  <body>
 
-		<section class="hero container">
+    <!-- Header -->
 
-			<section class="col-1-3">
-				<h2>Dedicated to the Craft of Building Websites</h2>
-				<p>Every year the brightest web designers and front-end 
-					developers descend on Chicago to discuss the latest 
-					technologies. Join us this August!</p>
-			</section>
+    <header class="container group">
 
-			<a class= "btn btn-alt" href="register.html">Register Now</a>
+      <h1 class="logo">
+        <a href="index.html">Styles <br> Conference</a>
+      </h1>
 
-			<section class="col-1-3">
-					<a href="speakers.html">
-						<h5>Speakers</h5>
-						<h3>World-Class Speakers</h3>
-					</a>
-					<p>Joining us from all around the world are over twenty
-					fantastic speakers, here to share their stories </p>
-			</section>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-			<section class = "col-1-3">
+      <nav class="nav primary-nav">
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
+      </nav>
 
-			</section>
+    </header>
 
-		</section>
+    <!-- Hero -->
 
-		<footer class="primary-footer container group">
-			<small>&copy; Styles Conference</small>
+    <section class="hero container">
 
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="speakers.html">Speakers</a>
-				<a href="schedule.html">Schedule</a>
-				<a href="venue.html">Venue</a>
-				<a href="register.html">Register</a>
-			</nav> 
+      <h2>Dedicated to the Craft of Building Websites</h2>
 
-		</footer>
+      <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
 
-	</body>
+      <a class="btn btn-alt" href="register.html">Register Now</a>
+
+    </section>
+
+    <!-- Teasers -->
+
+    <section class="grid">
+
+      <!-- Speakers -->
+
+      <section class="teaser col-1-3">
+        <a href="speakers.html">
+          <h5>Speakers</h5>
+          <h3>World-Class Speakers</h3>
+        </a>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+      </section><!--
+
+      Schedule
+
+      --><section class="col-1-3">
+        <a href="schedule.html">
+          <h5>Schedule</h5>
+          <h3>Three Inspiring Days</h3>
+        </a>
+        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+      </section><!--
+
+      Venue
+
+      --><section class="col-1-3">
+        <a href="venue.html">
+          <h5>Venue</h5>
+          <h3>The Chicago Theatre</h3>
+        </a>
+        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+      </section>
+
+    </section>
+
+    <!-- Footer -->
+
+    <footer class="primary-footer container group">
+
+      <small>&copy; Styles Conference</small>
+
+      <nav class= "nav">
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
+      </nav>
+
+    </footer>
+
+  </body>
 </html>
