--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Register - Styles Conference</title>
+    <title>Speakers - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
 
@@ -11,15 +11,15 @@
 
     <!-- Header -->
 
-    <header class="container group">
+    <header class="primary-header container group">
 
       <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+      <nav class= "nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -31,10 +31,15 @@
 
     <!-- Main content -->
 
-    <section class="container">
+    <section class="row-alt">
+      <div class = " lead container">
+        <h1>Register</h1>
 
-      <h1>Register</h1>
+        <p>We&#8217;re happy to welcome over twenty speakers to present 
+        on the industry&#8217;s latest technologies. Prepare for an
+        inspiration extravaganza. </p>
 
+      </div>
     </section>
 
     <!-- Footer -->
