--- a/index.html
+++ b/index.html
@@ -53,29 +53,32 @@
       <!-- Speakers -->
 
 	      <section class="teaser col-1-3">
-	        <a href="speakers.html">
-	          <h5>Speakers</h5>
-	          <h3>World-Class Speakers</h3>
-	        </a>
+          <h5>Speakers</h5>
+          <a href="speakers.html">
+            <img src="assets/images/home/speakers.jpg" alt="Professional Speaker">
+            <h3>World-Class Speakers</h3>
+          </a> 
 	        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
 	      </section><!--
 
 	      Schedule
 
-	      --><section class="col-1-3">
-	        <a href="schedule.html">
+	      --><section class="teaser col-1-3">
 	          <h5>Schedule</h5>
-	          <h3>Three Inspiring Days</h3>
+            <a href="schedule.html">
+              <img src="assets/images/home/schedule.jpg" alt="Schedule">
+              <h3>Three Inspiring Days</h3>
 	        </a>
 	        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
 	      </section><!--
 
 	      Venue
 
-	      --><section class="col-1-3">
-	        <a href="venue.html">
-	          <h5>Venue</h5>
-	          <h3>The Chicago Theatre</h3>
+	      --><section class="teaser col-1-3">
+            <h5>Venue</h5>
+            <a href="venue.html">
+              <img src= "assets/images/home/venue.jpg" alt="Venue">
+              <h3>The Chicago Theatre</h3>
 	        </a>
 	        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
 	      </section>
