--- a/schedule.html
+++ b/schedule.html
@@ -3,8 +3,10 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Schedule - Styles Conference</title>
+    <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet"
+    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -19,7 +21,7 @@
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav class= "nav primary-nav">
+      <nav class="nav primary-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="speakers.html">Speakers</a></li>
